feat: add crud for article

--- a/templates/article/edit.html.twig
+++ b/templates/article/edit.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h2>Ajouter un article</h2>
+    <h2>{{ is_create ? 'Ajouter un article' : 'Modifier cet article' }}</h2>
 
     {{ form(form) }}
 {% endblock %}
