feat: prepare crud for comment

--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -13,4 +13,10 @@
             <p>{{ article.status }}</p>
         {% endif %}
     </article>
+
+    <div>
+        <!-- Affichage des commentaires -->
+
+        {{ form(form) }}
+    </div>
 {% endblock %}
