feat: add asset mapper and bootstrap

--- a/templates/article/list.html.twig
+++ b/templates/article/list.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h1>Liste des articles</h1>
 
-    <table>
+    <table class="table">
         <thead>
             <tr>
                 <th>Titre</th>
