--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -12,13 +12,34 @@
         {% endblock %}
     </head>
     <body>
-        <nav>
-            <ul>
-                <li><a href="{{ path('articles_list') }}">Liste des articles</a></li>
-                <li><a href="{{ path('articles_create') }}">Créer un article</a></li>
-            </ul>
-        </nav>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-light bg-light">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('articles_list') }}">Liste des articles</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('articles_create') }}">Créer un article</a>
+                        </li>
+                        <li class="nav-item">
+                            {% if not app.user %}
+                                <a class="nav-link" href="{{ path('app_login') }}">Connexion</a>
+                            {% else %}
+                                <a class="nav-link" href="{{ path('app_logout') }}">Déconnexion</a>
+                            {% endif %}
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </header>
 
-        {% block body %}{% endblock %}
+        <div class="container">
+            {% block body %}{% endblock %}
+        </div>
     </body>
 </html>
