--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -1,24 +1,46 @@
 {% extends 'base.html.twig' %}
 
+{% form_theme form with [
+    'form/template.html.twig'
+] %}
+
 {% block body %}
-    <article>
-        <h2>{{  article.title }}</h2>
-        <h3>{{ article.category }}</h3>
+    <article class="card">
+        <div class="card-header">
+            <h2>{{  article.title }}</h2>
+            <h5>{{ article.category }}</h5>
+        </div>
 
-        {{ article.content }}
+        <div class="card-body">
+            {{ article.content }}
+        </div>
 
-        {% if article.publishedAt %}
-            <p>Article publié le {{ article.publishedAt }}</p>
-        {% else %}
-            <p>{{ article.status }}</p>
-        {% endif %}
+        <div class="card-footer text-muted">
+            {% if article.publishedAt %}
+                <p>Article publié le {{ article.publishedAt }}</p>
+            {% else %}
+                <p>{{ article.status }}</p>
+            {% endif %}
+        </div>
     </article>
 
-    <div>
+    <div class="mt-3">
+        <h3>Commentaires</h3>
         {% for comment in article.comments  %}
-            <p>{{ comment.comment }}</p>
+            <div class="card mb-3">
+                <div class="card-body">
+                    <p>{{ comment.comment }}</p>
+                </div>
+                <div class="card-footer">
+                    Publié à {{ comment.publishedAt|date('d/m/Y H:i') }}
+                </div>
+            </div>
         {% else %}
-            <p>Auncun commentaire</p>
+            <div class="card">
+                <div class="card-body">
+                    <p>{{ comment.comment }}</p>
+                </div>
+            </div>
         {% endfor %}
 
         {{ form(form) }}
