--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -41,5 +41,7 @@
         <div class="container">
             {% block body %}{% endblock %}
         </div>
+
+        {#<turbo-frame class="modal" tabindex="-1" role="dialog" id="modal"></turbo-frame>#}
     </body>
 </html>
