feat: add comment in modal

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -42,6 +42,6 @@
             {% block body %}{% endblock %}
         </div>
 
-        {#<turbo-frame class="modal" tabindex="-1" role="dialog" id="modal"></turbo-frame>#}
+        <turbo-frame class="modal" id="main-modal" tabindex="-1" aria-hidden="true"></turbo-frame>
     </body>
 </html>
