--- a/templates/article/show.html.twig
+++ b/templates/article/show.html.twig
@@ -24,10 +24,9 @@
         </div>
     </article>
 
-    <a href="{{ path('comments_create', {'article': article.id}) }}" data-turbo-frame="comment">
+    <a href="{{ path('comments_create', {'article': article.id}) }}" data-turbo-frame="main-modal" data-controller="modal" data-action="click->modal#open">
         Ajouter un commentaire
     </a>
-    <turbo-frame id="comment"></turbo-frame>
 
     <div class="mt-3">
         <h3>Commentaires</h3>
@@ -47,7 +46,5 @@
                 </div>
             </div>
         {% endfor %}
-
-        {#{{ form(form) }}#}
     </div>
 {% endblock %}
